--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <!--import google fonts-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
 <body>
-    <main class="main-container"></main>
+    <main class="main-container">
+       <header class="input-container">
+          <input class="city-input" placeholder="Search city" type="text">
+           <button class="search-btn">
+                <span class="material-symbols-outlined">
+                  search
+               </span>
+           </button>
+      </header>
+      <section class="weather-info">
+          <div class="location-date-container">
+              <div class="container">
+                  <span class="material-symbols-outlined">
+                       location_on
+                 </span>
+              </div>
+           </div>
+      </section>
+    </main>
 </body>
 </html>
