--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
-    <!--import google fonts-->
+<!--import google fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
 <body>
     <main class="main-container">
@@ -19,11 +19,18 @@
       </header>
       <section class="weather-info">
           <div class="location-date-container">
-              <div class="container">
-                  <span class="material-symbols-outlined">
-                       location_on
-                 </span>
+              <div class="location">
+                     <img src="assets/location_on_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png" alt="location icon"> 
+                    <h4country class="text">Jakarta</h4country>
               </div>
+              <h5 class="current-date-text regular-txt">Wed, 07 Aug</h5>
+           </div>
+           <div class="weather-summary-container">
+            <img src="assets/weather/clouds.svg" alt="" class="weather-summary-img">
+            <div class="weather-summary-info">
+                <h1 class="temp-txt">29 °C</h1>
+                <h3 class="condition-txt regular txt">Clouds</h3>
+            </div>
            </div>
       </section>
     </main>
