--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="location-date-container">
               <div class="location">
                      <img src="assets/location_on_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png" alt="location icon"> 
-                    <h4country class="text">Jakarta</h4country>
+                    <h4 class="country-txt">Jakarta</h4>
               </div>
               <h5 class="current-date-text regular-txt">Wed, 04 Aug</h5>
            </div>
