Your commit message

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                      <img src="assets/location_on_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png" alt="location icon"> 
                     <h4 class="country-txt">Jakarta</h4>
               </div>
-              <h5 class="current-date-text regular-txt">Wed, 04 Aug</h5>
+              <h5 class="current-date-txt regular-txt">Wed, 04 Aug</h5>
            </div>
            <div class="weather-summary-container">
             <img src="assets/weather/clouds.svg" alt="" class="weather-summary-img">
